@@ -6,7 +6,7 @@ use warnings;
 
 BEGIN {
 	$Type::Exception::AUTHORITY = 'cpan:TOBYINK';
-	$Type::Exception::VERSION   = '0.021_04';
+	$Type::Exception::VERSION   = '0.022';
 }
 
 use overload
