@@ -4,7 +4,7 @@ use strict;
 use warnings;
 
 our $AUTHORITY = 'cpan:TOBYINK';
-our $VERSION   = '0.021_04';
+our $VERSION   = '0.022';
 
 use Scalar::Util qw< blessed >;
 
