@@ -63,3 +63,8 @@
 2013-07-23 Type-Tiny version 0.020 released!
 
  - Support for Perl 5.6.x.
+
+2013-08-06 Type-Tiny version 0.020 released!
+
+ - Strict comparison methods in Type::Tiny.
+ - Improved compatibility with Moose attribute native traits.
